8220575: Correctly format test URI's that contain a retrieved IPv6 address
Reviewed-by: mdoerr
Backport-of: 0c2b7c4fc3549bb2c44777093fa6588c9da451e1